--- a/FT_column_example.ipynb
+++ b/FT_column_example.ipynb
@@ -12,26 +12,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Runing the script:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "IPython CPU timings (estimated):\n",
-      "  User   :      17.57 s.\n",
-      "  System :       0.50 s.\n",
-      "Wall time:      18.98 s.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%run -t examples/ftc_example.py"
+    "from PorousMediaLab import PorousMediaLab\n",
+    "import numpy as np\n",
+    "\n",
+    "# Setting up the properties of time and space domain:\n",
+    "t = 28 / 365\n",
+    "dx = 0.2\n",
+    "L = 40\n",
+    "phi = 0.8\n",
+    "dt = 1e-5\n",
+    "x = np.linspace(0, L, L / dx + 1)\n",
+    "\n",
+    "# Not simple initial concentration of solid iron:\n",
+    "Fe3_init = np.zeros(x.size)\n",
+    "Fe3_init[x > 5] = 75\n",
+    "Fe3_init[x > 15] = 0\n",
+    "Fe3_init[x > 25] = 75\n",
+    "Fe3_init[x > 35] = 0\n",
+    "\n",
+    "# Create the domain:\n",
+    "ftc = PorousMediaLab(L, dx, t, dt, phi)\n",
+    "\n",
+    "# Simulate Temperature with thermal diffusivity coefficient 281000 and init temperature 5C:\n",
+    "ftc.add_temperature(D=281000, init_temperature=5)\n",
+    "\n",
+    "# Adding species with names, diffusion coefficients, initial concentrations and boundary top and bottom conditions:\n",
+    "ftc.add_species(is_solute=True, element='O2', D=368, init_C=0, bc_top=0.231, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc.add_species(is_solute=True, element='Fe2', D=127, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc.add_species(is_solute=False, element='OM', D=5, init_C=15, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "ftc.add_solid_species('FeOH3', 5, Fe3_init, 0)\n",
+    "\n",
+    "# Specify the constants used in the rates:\n",
+    "ftc.constants['Q10'] = 4\n",
+    "ftc.constants['k_OM'] = 1\n",
+    "ftc.constants['Km_O2'] = 20e-3\n",
+    "ftc.constants['Km_FeOH3'] = 10\n",
+    "ftc.constants['k8'] = 1.4e+5\n",
+    "\n",
+    "# Specify the equations for rates:\n",
+    "ftc.rates['R1'] = 'Q10**((Temperature-5)/10) * k_OM * OM * O2 / (Km_O2 + O2)'\n",
+    "ftc.rates['R2'] = 'Q10**((Temperature-5)/10) * k_OM * OM * FeOH3 / (Km_FeOH3 + FeOH3) * Km_O2 / (Km_O2 + O2)'\n",
+    "ftc.rates['R8'] = 'k8 * O2 * Fe2'\n",
+    "\n",
+    "# ODEs for specific species:\n",
+    "ftc.dcdt['OM'] = '-R1-R2'\n",
+    "ftc.dcdt['O2'] = '-R1-R8'\n",
+    "ftc.dcdt['FeOH3'] = '-4*R2+R8'\n",
+    "ftc.dcdt['Fe2'] = '-R8+4*R2'\n",
+    "\n",
+    "# Because we are changing the boundary conditions for temperature and Oxygen (when T < 0 => no oxygen at the top), then we\n",
+    "# need to have a time loop:\n",
+    "for i in range(1, len(ftc.time)):\n",
+    "    if ftc.time[i] > 0:\n",
+    "        # Thawing period: 5C + sin function changes during 1 day\n",
+    "        ftc.Temperature.bc_top = 5 + 10 * np.sin(np.pi * 2 * ftc.time[i]) + 5 * np.sin(np.pi * 2 * ftc.time[i] * 365)\n",
+    "    if ftc.time[i] > 7 / 365:\n",
+    "        # Freezing period: -10C + sin function changes during 1 day\n",
+    "        ftc.Temperature.bc_top = -10 + 10 * np.sin(np.pi * 2 * ftc.time[i]) + 5 * np.sin(np.pi * 2 * ftc.time[i] * 365)\n",
+    "    if ftc.time[i] > 14 / 365:\n",
+    "        # Thawing period: 5C + sin function changes during 1 day\n",
+    "        ftc.Temperature.bc_top = 5 + 10 * np.sin(np.pi * 2 * ftc.time[i]) + 5 * np.sin(np.pi * 2 * ftc.time[i] * 365)\n",
+    "    if ftc.time[i] > 21 / 365:\n",
+    "        # Freezing period: -10C + sin function changes during 1 day\n",
+    "        ftc.Temperature.bc_top = -10 + 10 * np.sin(np.pi * 2 * ftc.time[i]) + 5 * np.sin(np.pi * 2 * ftc.time[i] * 365)\n",
+    "\n",
+    "    # when T < 0 => no oxygen at the top:\n",
+    "    if ftc.Temperature.bc_top < 0:\n",
+    "        ftc.O2.bc_top = 0\n",
+    "    else:\n",
+    "        ftc.O2.bc_top = 0.231\n",
+    "\n",
+    "    # Integrate one timestep:\n",
+    "    ftc.integrate_one_timestep(i)"
    ]
   },
   {
