updated the tests and frameworks

--- a/Sediment_example.ipynb
+++ b/Sediment_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -30,25 +30,29 @@
       "\tdx = 2.00e-01,\n",
       "\tw = 0.20\n",
       "Simulation started:\n",
-      "\t 2017-02-08 18:01:55\n",
+      "\t 2017-02-09 11:19:09\n",
       "\n",
       "Warning: Numerical instability. adjusting dt...\n",
       "Time step was reduced to\n",
-      "\tdt = 1.00e-02.\n",
+      "\tdt = 2.00e-02.\n",
       "\n",
       "Warning: Numerical instability. adjusting dt...\n",
       "Time step was reduced to\n",
-      "\tdt = 1.00e-03.\n",
+      "\tdt = 4.00e-03.\n",
       "\n",
       "Warning: Numerical instability. adjusting dt...\n",
       "Time step was reduced to\n",
-      "\tdt = 1.00e-04.\n",
+      "\tdt = 8.00e-04.\n",
+      "\n",
+      "Warning: Numerical instability. adjusting dt...\n",
+      "Time step was reduced to\n",
+      "\tdt = 1.60e-04.\n",
       "\n",
       "\n",
       "Estimated time of the code execution:\n",
-      "\t 6h:20m:34s\n",
+      "\t 3h:56m:49s\n",
       "Will finish approx.:\n",
-      "\t 2017-02-09 00:22:31\n"
+      "\t 2017-02-09 15:16:00\n"
      ]
     }
    ],
@@ -78,144 +82,6 @@
    "outputs": [],
    "source": [
     "sediment.plot_contourplots_of_rates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 545,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  2.31000000e-01,   1.88204071e-01,   1.53347459e-01,\n",
-       "         1.23245910e-01,   9.73907642e-02,   7.54918001e-02,\n",
-       "         5.72900465e-02,   4.24932132e-02,   3.07588175e-02,\n",
-       "         2.16997696e-02,   1.49007818e-02,   9.93937741e-03,\n",
-       "         6.40597819e-03,   3.92370525e-03,   2.19197880e-03,\n",
-       "         1.03421823e-03,   3.71812986e-04,   9.49530448e-05,\n",
-       "         1.73488947e-05,   2.43656168e-06,   2.89729826e-07,\n",
-       "         3.19831756e-08,   3.54907353e-09,   4.21937784e-10,\n",
-       "         5.56646654e-11,   8.12884352e-12,   1.27883139e-12,\n",
-       "         2.10407014e-13,   3.54570425e-14,   6.04789791e-15,\n",
-       "         1.03798368e-15,   1.78757657e-16,   3.08535846e-17,\n",
-       "         5.33463419e-18,   9.23831483e-19,   1.60236975e-19,\n",
-       "         2.78378055e-20,   4.84443717e-21,   8.44557514e-22,\n",
-       "         1.47516269e-22,   2.58183153e-23,   4.52846711e-24,\n",
-       "         7.96111820e-25,   1.40303227e-25,   2.47919808e-26,\n",
-       "         4.39332533e-27,   7.80932678e-28,   1.39278580e-28,\n",
-       "         2.49306339e-29,   4.48029640e-30,   8.08673446e-31,\n",
-       "         1.46665761e-31,   2.67426101e-32,   4.90537164e-33,\n",
-       "         9.05861359e-34,   1.68567045e-34,   3.16443083e-35,\n",
-       "         6.00121549e-36,   1.15176009e-36,   2.24185644e-37,\n",
-       "         4.43749651e-38,   8.96082978e-39,   1.85287721e-39,\n",
-       "         3.93883850e-40,   8.64176458e-41,   1.96309583e-41,\n",
-       "         4.62594055e-42,   1.13084124e-42,   2.86234676e-43,\n",
-       "         7.47514821e-44,   2.00491229e-44,   5.49523218e-45,\n",
-       "         1.53180833e-45,   4.32401671e-46,   1.23157026e-46,\n",
-       "         3.52886722e-47,   1.01482989e-47,   2.92368826e-48,\n",
-       "         8.42606954e-49,   2.42656524e-49,   6.97682777e-50,\n",
-       "         2.00139974e-50,   5.72526408e-51,   1.63256205e-51,\n",
-       "         4.63897844e-52,   1.31325865e-52,   3.70317690e-53,\n",
-       "         1.04000432e-53,   2.90862599e-54,   8.10028909e-55,\n",
-       "         2.24621256e-55,   6.20189966e-56,   1.70496160e-56,\n",
-       "         4.66679009e-57,   1.27185607e-57,   3.45127504e-58,\n",
-       "         9.32506670e-59,   2.50880226e-59,   6.72103866e-60,\n",
-       "         1.79298589e-60,   4.76325986e-61,   1.26019027e-61,\n",
-       "         3.32040332e-62,   8.71339832e-63,   2.27743514e-63,\n",
-       "         5.92906674e-64,   1.53754915e-64,   3.97186737e-65,\n",
-       "         1.02212590e-65,   2.62046840e-66,   6.69328495e-67,\n",
-       "         1.70336027e-67,   4.31918111e-68,   1.09130164e-68,\n",
-       "         2.74762430e-69,   6.89381358e-70,   1.72373970e-70,\n",
-       "         4.29550189e-71,   1.06685679e-71,   2.64099763e-72,\n",
-       "         6.51657287e-73,   1.60281496e-73,   3.93054761e-74,\n",
-       "         9.63823345e-75,   2.47809243e-75,   1.13704069e-75])"
-      ]
-     },
-     "execution_count": 545,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sediment.O2.concentration[:,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 546,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 547,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  2.31000000e-01,   1.88204071e-01,   1.53347459e-01,\n",
-       "         1.23245910e-01,   9.73907642e-02,   7.54918001e-02,\n",
-       "         5.72900465e-02,   4.24932132e-02,   3.07588175e-02,\n",
-       "         2.16997696e-02,   1.49007818e-02,   9.93937741e-03,\n",
-       "         6.40597819e-03,   3.92370525e-03,   2.19197880e-03,\n",
-       "         1.03421823e-03,   3.71812986e-04,   9.49530448e-05,\n",
-       "         1.73488947e-05,   2.43656168e-06,   2.89729826e-07,\n",
-       "         3.19831756e-08,   3.54907353e-09,   4.21937784e-10,\n",
-       "         5.56646654e-11,   8.12884352e-12,   1.27883139e-12,\n",
-       "         2.10407014e-13,   3.54570425e-14,   6.04789791e-15,\n",
-       "         1.03798368e-15,   1.78757657e-16,   3.08535846e-17,\n",
-       "         5.33463419e-18,   9.23831483e-19,   1.60236975e-19,\n",
-       "         2.78378055e-20,   4.84443717e-21,   8.44557514e-22,\n",
-       "         1.47516269e-22,   2.58183153e-23,   4.52846711e-24,\n",
-       "         7.96111820e-25,   1.40303227e-25,   2.47919808e-26,\n",
-       "         4.39332533e-27,   7.80932678e-28,   1.39278580e-28,\n",
-       "         2.49306339e-29,   4.48029640e-30,   8.08673446e-31,\n",
-       "         1.46665761e-31,   2.67426101e-32,   4.90537164e-33,\n",
-       "         9.05861359e-34,   1.68567045e-34,   3.16443083e-35,\n",
-       "         6.00121549e-36,   1.15176009e-36,   2.24185644e-37,\n",
-       "         4.43749651e-38,   8.96082978e-39,   1.85287721e-39,\n",
-       "         3.93883850e-40,   8.64176458e-41,   1.96309583e-41,\n",
-       "         4.62594055e-42,   1.13084124e-42,   2.86234676e-43,\n",
-       "         7.47514821e-44,   2.00491229e-44,   5.49523218e-45,\n",
-       "         1.53180833e-45,   4.32401671e-46,   1.23157026e-46,\n",
-       "         3.52886722e-47,   1.01482989e-47,   2.92368826e-48,\n",
-       "         8.42606954e-49,   2.42656524e-49,   6.97682777e-50,\n",
-       "         2.00139974e-50,   5.72526408e-51,   1.63256205e-51,\n",
-       "         4.63897844e-52,   1.31325865e-52,   3.70317690e-53,\n",
-       "         1.04000432e-53,   2.90862599e-54,   8.10028909e-55,\n",
-       "         2.24621256e-55,   6.20189966e-56,   1.70496160e-56,\n",
-       "         4.66679009e-57,   1.27185607e-57,   3.45127504e-58,\n",
-       "         9.32506670e-59,   2.50880226e-59,   6.72103866e-60,\n",
-       "         1.79298589e-60,   4.76325986e-61,   1.26019027e-61,\n",
-       "         3.32040332e-62,   8.71339832e-63,   2.27743514e-63,\n",
-       "         5.92906674e-64,   1.53754915e-64,   3.97186737e-65,\n",
-       "         1.02212590e-65,   2.62046840e-66,   6.69328495e-67,\n",
-       "         1.70336027e-67,   4.31918111e-68,   1.09130164e-68,\n",
-       "         2.74762430e-69,   6.89381358e-70,   1.72373970e-70,\n",
-       "         4.29550189e-71,   1.06685679e-71,   2.64099763e-72,\n",
-       "         6.51657287e-73,   1.60281496e-73,   3.93054761e-74,\n",
-       "         9.63823345e-75,   2.47809243e-75,   1.13704069e-75])"
-      ]
-     },
-     "execution_count": 547,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sediment.O2.concentration[:,0]"
    ]
   },
   {
