--- a/examples/acid_base_example.ipynb
+++ b/examples/acid_base_example.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.825\n"
+      "7.0\n"
      ]
     }
    ],
@@ -63,11 +63,12 @@
     "# def test():\n",
     "g=7.0\n",
     "system = System()\n",
-    "carbonic = Acid(pKa=[3.6, 10.32], charge=0, conc=1e-7)\n",
-    "system = System(carbonic)\n",
+    "carbonic = Acid(pKa=[3.6, 10.32], charge=0, conc=1e-3)\n",
+    "ca = Neutral(charge=2, conc=5e-4)\n",
+    "system = System(carbonic, ca)\n",
     "system.pHsolve(guess=g, tol=1e-1)\n",
     "g = system.pH \n",
-    "print(system.pH) # Should print 2.8343772"
+    "print(system.pH)"
    ]
   },
   {
