acid base example

--- a/examples/acid_base_example.ipynb
+++ b/examples/acid_base_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -581,17 +581,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.79108200073\n"
+      "8.27974624634\n"
      ]
     }
    ],
    "source": [
     ">>> from pHcalc import Acid, Neutral, System\n",
     ">>> carbonic = Acid(pKa=[3.6, 10.32], charge=0, conc=0.0000001)\n",
-    ">>> system = System(carbonic)\n",
+    ">>> ca = Neutral(charge=2, conc=1e-6)\n",
+    ">>> system = System(carbonic,ca)\n",
     ">>> system.pHsolve()\n",
     ">>> print(system.pH) # Should print 2.8343772"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
