examples for the presentation

--- a/examples/Batch - Roden 2008.ipynb
+++ b/examples/Batch - Roden 2008.ipynb
@@ -120,7 +120,9 @@
   {
    "cell_type": "code",
    "execution_count": 473,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -145,6 +147,7 @@
    "cell_type": "code",
    "execution_count": 474,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -234,7 +237,9 @@
   {
    "cell_type": "code",
    "execution_count": 479,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -317,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
