updated for presentation

--- a/examples/Batch experiment - Calcite-Gypsum Evaporation.ipynb
+++ b/examples/Batch experiment - Calcite-Gypsum Evaporation.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Import reuireed modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 122,
    "metadata": {
@@ -17,16 +24,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 123,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "tend = 1\n",
-    "dt = 0.0001\n",
-    "phi=0.5"
+    "### Initiate the model"
    ]
   },
   {
@@ -37,7 +40,14 @@
    },
    "outputs": [],
    "source": [
-    "bl = BatchLab(tend, dt)"
+    "bl = BatchLab(tend = 1, dt = 0.0001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create your solution"
    ]
   },
   {
@@ -62,12 +72,22 @@
     "\n",
     "bl.add_acid(species=['H2SO4', 'HSO4', 'SO4'], pKa=[-10, 1.99])\n",
     "\n",
-    "bl.add_species(element='Ca', init_C=0)\n",
     "bl.add_species(element='CaCO3', init_C=0)\n",
     "bl.add_species(element='CaSO4', init_C=0)\n",
-    "\n",
+    "bl.add_species(element='Ca', init_C=0)\n",
     "\n",
     "bl.add_ion(element='Ca', charge=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Specify "
    ]
   },
   {
