renamed modules to lower case

--- a/examples/Batch - Watson 2003.ipynb
+++ b/examples/Batch - Watson 2003.ipynb
@@ -9,7 +9,7 @@
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
     "sys.path.append('../porousmedialab')\n",
-    "from BatchLab import BatchLab\n",
+    "from batch import Batch\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "%matplotlib inline"
@@ -35,7 +35,7 @@
    },
    "outputs": [],
    "source": [
-    "bl = BatchLab(tend, dt)"
+    "bl = Batch(tend, dt)"
    ]
   },
   {
