created pip package

--- a/examples/Batch experiment - Calcite-Gypsum Evaporation.ipynb
+++ b/examples/Batch experiment - Calcite-Gypsum Evaporation.ipynb
@@ -16,10 +16,9 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import sys\n",
-    "sys.path.append('../porousmedialab')\n",
-    "from batch import Batch\n",
+    "from porousmedialab.batch import Batch\n",
     "import numpy as np\n",
+    "import seaborn as sns\n",
     "%matplotlib inline"
    ]
   },
