--- a/examples/FT_presentation_simple_2.ipynb
+++ b/examples/FT_presentation_simple_2.ipynb
@@ -10,15 +10,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../porousmedialab')\n",
-    "from column import Column\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "import numpy as np\n",
+    "%matplotlib inline\n",
+    "\n",
+    "from porousmedialab.column import Column"
    ]
   },
   {
@@ -77,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ftc.add_species(is_solute=True, element='O2', D=368, init_C=0, bc_top=0.231, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
@@ -120,7 +123,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ftc.add_temperature(D=281000, init_temperature=5)"
