--- a/examples/FT_presentation_simple_3.ipynb
+++ b/examples/FT_presentation_simple_3.ipynb
@@ -15,12 +15,11 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../porousmedialab')\n",
-    "from column import Column\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "import numpy as np\n",
+    "%matplotlib inline\n",
+    "\n",
+    "from porousmedialab.column import Column"
    ]
   },
   {
@@ -202,7 +201,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in range(1, len(ftc.time)):\n",
