--- a/examples/Sediment_example.ipynb
+++ b/examples/Sediment_example.ipynb
@@ -3,13 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../porousmedialab')\n",
-    "from column import Column\n",
-    "%matplotlib inline"
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "%matplotlib inline\n",
+    "\n",
+    "from porousmedialab.column import Column"
    ]
   },
   {
