--- a/examples/Column - Sediment.ipynb
+++ b/examples/Column - Sediment.ipynb
@@ -47,30 +47,30 @@
     "phi = 0.9\n",
     "dt = 1e-2\n",
     "\n",
-    "sediment = Column(L, dx, t, dt, phi, w)\n",
+    "sediment = Column(L, dx, t, dt, w)\n",
     "\n",
-    "sediment.add_species(is_solute=True, element='O2', D=368, init_C=0, bc_top=0.231, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=True, element='NO3', D=359, init_C=0, bc_top=1.5e-3, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=True, element='Mn2', D=220, init_C=2e-3, bc_top=2e-3, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=True, element='Fe2', D=127, init_C=0, bc_top=0, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=True, element='SO4', D=189, init_C=15, bc_top=28, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=True, element='NH4', D=363, init_C=22e-3, bc_top=22e-3, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=True, element='CH4', D=220, init_C=0, bc_top=0, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=True, element='TIC', D=220, init_C=0, bc_top=0, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=True, element='TIC', D=220, init_C=0, bc_top=0, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=True, element='TRS', D=284, init_C=0, bc_top=0, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, element='O2', D=368, init_C=0, bc_top=0.231, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, element='NO3', D=359, init_C=0, bc_top=1.5e-3, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, element='Mn2', D=220, init_C=2e-3, bc_top=2e-3, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, element='Fe2', D=127, init_C=0, bc_top=0, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, element='SO4', D=189, init_C=15, bc_top=28, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, element='NH4', D=363, init_C=22e-3, bc_top=22e-3, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, element='CH4', D=220, init_C=0, bc_top=0, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, element='TIC', D=220, init_C=0, bc_top=0, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, element='TIC', D=220, init_C=0, bc_top=0, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=phi, element='TRS', D=284, init_C=0, bc_top=0, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "\n",
-    "sediment.add_species(is_solute=False, element='OM1', D=20, init_C=15, bc_top=180, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=False, element='OM2', D=20, init_C=5, bc_top=40, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=False, element='MnO2', D=20, init_C=0, bc_top=40, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=False, element='FeOH3', D=20, init_C=0, bc_top=75, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=False, element='MnCO3', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=False, element='FeCO3', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=False, element='adsFe', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=False, element='adsMn', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=False, element='adsNH4', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
-    "sediment.add_species(is_solute=False, element='FeS', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, element='OM1', D=20, init_C=15, bc_top=180, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, element='OM2', D=20, init_C=5, bc_top=40, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, element='MnO2', D=20, init_C=0, bc_top=40, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, element='FeOH3', D=20, init_C=0, bc_top=75, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, element='MnCO3', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, element='FeCO3', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, element='adsFe', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, element='adsMn', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, element='adsNH4', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
+    "sediment.add_species(theta=1-phi, element='FeS', D=20, init_C=0, bc_top=0, bc_top_type='flux', bc_bot=0, bc_bot_type='flux')\n",
     "\n",
     "\n",
     "sediment.constants['x1'] = 112\n",
@@ -931,9 +931,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -945,7 +945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
