--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,18 @@
 # porousmedialab changelog
 
+## 1.3.1
+
+2017-12-05
+
+### NEW
+
+- added calibration routines (see examples);
+
+### IMPROVED
+
+- improved computational time when boundary conditions are changed. The frameworks makes additional checks if it requires to rebuild left hand side and right hand side matrices. 
+
+
 ## 1.2.1
 
 2017-11-06
