updated examples and renamed init_C and bc_top_value

--- a/examples/Column - Freeze-Thaw.ipynb
+++ b/examples/Column - Freeze-Thaw.ipynb
@@ -88,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ftc.add_species(theta=phi, element='O2', D=368, init_C=0, bc_top=0.231, bc_top_type='dirichlet', bc_bot=0, bc_bot_type='flux')\n",
@@ -132,7 +134,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ftc.add_species(theta=0.99, element='Temperature', D=281000, init_C=5, bc_top=5., bc_top_type='constant', bc_bot=0, bc_bot_type='flux')"
@@ -190,7 +194,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# %pdb"
