--- a/examples/Column - Sediment.ipynb
+++ b/examples/Column - Sediment.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
