--- a/examples/Column - Freeze-Thaw.ipynb
+++ b/examples/Column - Freeze-Thaw.ipynb
@@ -210,7 +210,9 @@
       "Boundary conditions changed for O2 at time 1.000035186423226e-05\n",
       "Boundary conditions changed for CO2 at time 1.000035186423226e-05\n",
       "Boundary conditions changed for O2 at time 0.019180674875597475\n",
-      "Boundary conditions changed for CO2 at time 0.019180674875597475\n"
+      "Boundary conditions changed for CO2 at time 0.019180674875597475\n",
+      "Boundary conditions changed for O2 at time 0.03836134975119495\n",
+      "Boundary conditions changed for CO2 at time 0.03836134975119495\n"
      ]
     }
    ],
